Fixed navbar visibility in about section

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -196,7 +196,7 @@ ul#nav li a:active {
   background-color: transparent !important;
 }
 ul#nav li.current a {
-  color: #f06000;
+  color: rgb(59, 206, 123);
 }
 
 /* ------------------------------------------------------------------ */
@@ -205,6 +205,7 @@ ul#nav li.current a {
 
 #about {
   background: #6d9197;
+  margin-top: 5px;
   padding-top: 96px;
   padding-bottom: 66px;
   overflow: hidden;
@@ -245,8 +246,8 @@ ul#nav li.current a {
 
 #about .profile-pic {
   position: relative;
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  height: 220px;
   border-radius: 25%;
 }
 
